--- a/nginx.conf
+++ b/nginx.conf
@@ -19,24 +19,22 @@ server {
 
     location /pgadmin/ {
         rewrite ^/pgadmin/(.*)$ /$1 break;
-        proxy_pass http://pgadmin:5433;  # Utilisation du port 5433 pour pgAdmin
+        proxy_pass http://pgadmin:5433;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
     }
 
     location /static/ {
-        alias /pgadmin4/pgadmin/static/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers statiques
+        alias /pgadmin4/pgadmin/static/;
     }
 
     location /browser/ {
-        alias /pgadmin4/pgadmin/browser/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers browsers
+        alias /pgadmin4/pgadmin/browser/;
     }
 
     location /tools/ {
-        alias /pgadmin4/pgadmin/tools/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers statiques
+        alias /pgadmin4/pgadmin/tools/;
     }
-
 }
