--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,14 +37,14 @@ services:
       - mynetwork 
 
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:latest
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
-      PGADMIN_LISTEN_PORT: 5433
+      PGADMIN_LISTEN_PORT: 5050
     ports:
-      - "5433:5433"
+      - "5050:5050"
     volumes:
       - pgadmin_static:/pgadmin4/pgadmin/static
       - pgadmin_browser:/pgadmin4/pgadmin/browser
