--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       - "5050:5050"
     volumes:
       - pgadmin_static:/pgadmin4/pgadmin/static
-      - pgadmin_browser:/pgadmin4/pgadmin/browser
-      - pgadmin_tools:/pgadmin4/pgadmin/tools
+      - pgadmin_browser:/pgadmin4/pgadmin/browser/templates/browser
+      - pgadmin_tools:/pgadmin4/pgadmin/tools/templates
     depends_on:
       - postgres
     networks:
@@ -61,8 +61,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - pgadmin_static:/pgadmin4/pgadmin/static
-      - pgadmin_browser:/pgadmin4/pgadmin/browser
-      - pgadmin_tools:/pgadmin4/pgadmin/tools
+      - pgadmin_browser:/pgadmin4/pgadmin/browser/templates/browser
+      - pgadmin_tools:/pgadmin4/pgadmin/tools/templates
     depends_on:
       - frontend
       - api
