--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,32 +1,29 @@
 # Étape de build
 FROM node:20-alpine AS build
 
-# Création du répertoire de travail
+# Définir le répertoire de travail
 WORKDIR /usr/src/app
 
-# Copie des fichiers de dépendances uniquement
+# Copier les fichiers de dépendances et installer les dépendances de production uniquement
 COPY package*.json ./
+RUN npm install --production
 
-# Installation des dépendances
-RUN npm install
+# Copier les fichiers de configuration et les fichiers source
+COPY . .
 
-# Copie des fichiers de configuration et des fichiers source
-COPY next.config.mjs ./
-COPY pages ./pages
-
-# Construction de l'API
+# Construire l'application
 RUN npm run build
 
 # Étape finale
 FROM node:20-alpine
 
-# Création du répertoire de travail
+# Définir le répertoire de travail
 WORKDIR /usr/src/app
 
 # Copier uniquement les artefacts nécessaires depuis l'étape de build
 COPY --from=build /usr/src/app ./
 
-# Exposition du port nécessaire pour l'API
+# Exposer le port nécessaire pour l'API
 EXPOSE 3001
 
 # Commande pour démarrer l'API
