--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
     "cors-anywhere": "^0.4.4",
     "next": "14.2.4",
     "react": "^18",
